feat: Upgraded entrypoint.sh
